2009-11-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/perl-mode.el (perl-font-lock-special-syntactic-constructs):
	Don't signal an error when bumping into EOB in tr, s, or y.

2009-11-29  Juri Linkov  <juri@jurta.org>

	* startup.el (fancy-about-text): Fix wording of Guided Tour.
	(Bug#4960)

	* descr-text.el (describe-char-unidata-list): Use lowercase name
	for "Unicode name" like in other tags.

2009-11-29  Juri Linkov  <juri@jurta.org>

	* ediff-util.el (ediff-minibuffer-with-setup-hook):
	New compatibility macro.
	(ediff-read-file-name): Use it instead of `minibuffer-with-setup-hook'.

2009-11-29  Juri Linkov  <juri@jurta.org>

	Add defcustom to define the cycling order of `recenter-top-bottom'.
	(Bug#4981)

	* window.el (recenter-last-op): Doc fix.
	(recenter-positions): New defcustom.
	(recenter-top-bottom): Rewrite to use `recenter-positions'.
	(move-to-window-line-top-bottom): Rewrite to use `recenter-positions'.

2009-11-29  Michael Albinus  <michael.albinus@gmx.de>

	Improve integration of Tramp and ange-ftp in eshell.

	* eshell/em-unix (eshell/whoami): Make it a defun but a defalias.
	(eshell/su): Flatten args.  Apply better args parsing.  Use "cd".
	(eshell/sudo): Flatten args.  Let-bind `default-directory'.

	* eshell/esh-util.el (top): Require also Tramp when compiling.
	(eshell-directory-files-and-attributes): Check for FTP remote
	connection.
	(eshell-parse-ange-ls): Let-bind `ange-ftp-name-format',
	`ange-ftp-ftp-name-arg', `ange-ftp-ftp-name-res'.
	(eshell-file-attributes): Handle ".".  Return `entry'.

	* net/ange-ftp.el (ange-ftp-parse-filename): Use `save-match-data'.
	(ange-ftp-directory-files-and-attributes)
	(ange-ftp-real-directory-files-and-attributes): New defuns.

	* net/tramp.el (tramp-maybe-open-connection): Open the remote
	shell with "exec" when possible.  This prevents trailing prompts
	in `start-file-process'.

2009-11-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	Try and remove assumptions about point-min==1.